Added a curl script to notebook

--- a/Examples/pentaquark_dalitzplot.ipynb
+++ b/Examples/pentaquark_dalitzplot.ipynb
@@ -1,6 +1,65 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "    <style class=\"js-load-remove-tag\">\n",
+       "        .cs-loading:after {\n",
+       "            overflow: hidden;\n",
+       "            display: inline-block;\n",
+       "            vertical-align: bottom;\n",
+       "            -webkit-animation: cs-ellipsis steps(3,end) 3250ms infinite;      \n",
+       "            animation: cs-ellipsis steps(3,end) 3250ms infinite;\n",
+       "            content: \"\\2026\";\n",
+       "            width: 0px;\n",
+       "        }\n",
+       "        @keyframes cs-ellipsis { to { width: 0.9em; } }\n",
+       "        @-webkit-keyframes cs-ellipsis { to { width: 0.9em; } }\n",
+       "    </style>\n",
+       "\n",
+       "    <script class=\"js-load-remove-tag\">\n",
+       "      $(\".js-load-remove-tag\").parent(\".output_subarea\").css(\"padding\", \"0\");\n",
+       "    </script>\n"
+      ],
+      "text/plain": [
+       "HTML{String}(\"    <style class=\\\"js-load-remove-tag\\\">\\n        .cs-loading:after {\\n            overflow: hidden;\\n            display: inline-block;\\n            vertical-align: bottom;\\n            -webkit-animation: cs-ellipsis steps(3,end) 3250ms infinite;      \\n            animation: cs-ellipsis steps(3,end) 3250ms infinite;\\n            content: \\\"\\\\2026\\\";\\n            width: 0px;\\n        }\\n        @keyframes cs-ellipsis { to { width: 0.9em; } }\\n        @-webkit-keyframes cs-ellipsis { to { width: 0.9em; } }\\n    </style>\\n\\n    <script class=\\\"js-load-remove-tag\\\">\\n      \\$(\\\".js-load-remove-tag\\\").parent(\\\".output_subarea\\\").css(\\\"padding\\\", \\\"0\\\");\\n    </script>\\n\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cur_script = \"\"\"\n",
+    "    <style class=\"js-load-remove-tag\">\n",
+    "        .cs-loading:after {\n",
+    "            overflow: hidden;\n",
+    "            display: inline-block;\n",
+    "            vertical-align: bottom;\n",
+    "            -webkit-animation: cs-ellipsis steps(3,end) 3250ms infinite;      \n",
+    "            animation: cs-ellipsis steps(3,end) 3250ms infinite;\n",
+    "            content: \"\\\\2026\";\n",
+    "            width: 0px;\n",
+    "        }\n",
+    "        @keyframes cs-ellipsis { to { width: 0.9em; } }\n",
+    "        @-webkit-keyframes cs-ellipsis { to { width: 0.9em; } }\n",
+    "    </style>\n",
+    "\n",
+    "    <script class=\"js-load-remove-tag\">\n",
+    "      \\$(\".js-load-remove-tag\").parent(\".output_subarea\").css(\"padding\", \"0\");\n",
+    "    </script>\n",
+    "\"\"\"\n",
+    "\n",
+    "display(HTML(cur_script))\n",
+    "# credits for the script to https://github.com/djsegal/tetris-binder/blob/master/tetris.ipynb"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +113,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Recompiling stale cache file C:\\Users\\mikha\\.julia\\compiled\\v1.1\\Plots\\ld3vC.ji for Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80]\n",
+      "└ @ Base loading.jl:1184\n",
+      "┌ Info: Recompiling stale cache file C:\\Users\\mikha\\.julia\\compiled\\v1.1\\Interact\\XmYW4.ji for Interact [c601a237-2ae4-5e1e-952c-7a85b0c7eef1]\n",
+      "└ @ Base loading.jl:1184\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "// Immediately-invoked-function-expression to avoid global variables.\n",
+       "(function() {\n",
+       "    var warning_div = document.getElementById(\"webio-warning-2018905659628791554\");\n",
+       "    var hide = function () {\n",
+       "        var script = document.getElementById(\"webio-setup-11882232332206454999\");\n",
+       "        var parent = script && script.parentElement;\n",
+       "        var grandparent = parent && parent.parentElement;\n",
+       "        if (grandparent) {\n",
+       "            grandparent.style.display = \"none\";\n",
+       "        }\n",
+       "        warning_div.style.display = \"none\";\n",
+       "    };\n",
+       "    if (typeof Jupyter !== \"undefined\") {\n",
+       "        console.log(\"WebIO detected Jupyter notebook environment.\");\n",
+       "        // Jupyter notebook.\n",
+       "        var extensions = (\n",
+       "            Jupyter\n",
+       "            && Jupyter.notebook.config.data\n",
+       "            && Jupyter.notebook.config.data.load_extensions\n",
+       "        );\n",
+       "        if (extensions && extensions[\"webio/main\"]) {\n",
+       "            // Extension already loaded.\n",
+       "            console.log(\"Jupyter WebIO nbextension detected; not loading ad-hoc.\");\n",
+       "            hide();\n",
+       "            return;\n",
+       "        }\n",
+       "        console.warn(\"Loading WebIO Jupyter extension on an ad-hoc basis. Consider enabling the WebIO nbextension for a stabler experience (this should happen automatically when building WebIO).\");\n",
+       "        require([\"/assetserver/1ea2c7a56d53250e18dc76d9c787e50c908e9f23-dist/main.js\"], function (webIOModule) {\n",
+       "            webIOModule.load_ipython_extension();\n",
+       "        });\n",
+       "        warning_div.innerHTML = \"<strong>Loading WebIO Jupyter extension on an ad-hoc basis. Consider enabling the WebIO nbextension for a stabler experience (this should happen automatically when building WebIO).</strong>\";\n",
+       "    } else if (window.location.pathname.includes(\"/lab\")) {\n",
+       "        // Guessing JupyterLa\n",
+       "        console.log(\"Jupyter Lab detected; make sure the @webio/jupyter-lab-provider labextension is installed.\");\n",
+       "        hide();\n",
+       "        return;\n",
+       "    }\n",
+       "})();\n",
+       "\n",
+       "</script>\n",
+       "<div\n",
+       "    id=\"webio-warning-2018905659628791554\"\n",
+       "    class=\"output_text output_stderr\"\n",
+       "    style=\"padding: 1em; font-weight: bold;\"\n",
+       ">\n",
+       "    Unable to load WebIO. Please make sure WebIO works for your Jupyter client.\n",
+       "    <!-- TODO: link to installation docs. -->\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "HTML{String}(\"<script>\\n// Immediately-invoked-function-expression to avoid global variables.\\n(function() {\\n    var warning_div = document.getElementById(\\\"webio-warning-2018905659628791554\\\");\\n    var hide = function () {\\n        var script = document.getElementById(\\\"webio-setup-11882232332206454999\\\");\\n        var parent = script && script.parentElement;\\n        var grandparent = parent && parent.parentElement;\\n        if (grandparent) {\\n            grandparent.style.display = \\\"none\\\";\\n        }\\n        warning_div.style.display = \\\"none\\\";\\n    };\\n    if (typeof Jupyter !== \\\"undefined\\\") {\\n        console.log(\\\"WebIO detected Jupyter notebook environment.\\\");\\n        // Jupyter notebook.\\n        var extensions = (\\n            Jupyter\\n            && Jupyter.notebook.config.data\\n            && Jupyter.notebook.config.data.load_extensions\\n        );\\n        if (extensions && extensions[\\\"webio/main\\\"]) {\\n            // Extension already loaded.\\n            console.log(\\\"Jupyter WebIO nbextension detected; not loading ad-hoc.\\\");\\n            hide();\\n            return;\\n        }\\n        console.warn(\\\"Loading WebIO Jupyter extension on an ad-hoc basis. Consider enabling the WebIO nbextension for a stabler experience (this should happen automatically when building WebIO).\\\");\\n        require([\\\"/assetserver/1ea2c7a56d53250e18dc76d9c787e50c908e9f23-dist/main.js\\\"], function (webIOModule) {\\n            webIOModule.load_ipython_extension();\\n        });\\n        warning_div.innerHTML = \\\"<strong>Loading WebIO Jupyter extension on an ad-hoc basis. Consider enabling the WebIO nbextension for a stabler experience (this should happen automatically when building WebIO).</strong>\\\";\\n    } else if (window.location.pathname.includes(\\\"/lab\\\")) {\\n        // Guessing JupyterLa\\n        console.log(\\\"Jupyter Lab detected; make sure the @webio/jupyter-lab-provider labextension is installed.\\\");\\n        hide();\\n        return;\\n    }\\n})();\\n\\n</script>\\n<div\\n    id=\\\"webio-warning-2018905659628791554\\\"\\n    class=\\\"output_text output_stderr\\\"\\n    style=\\\"padding: 1em; font-weight: bold;\\\"\\n>\\n    Unable to load WebIO. Please make sure WebIO works for your Jupyter client.\\n    <!-- TODO: link to installation docs. -->\\n</div>\\n\")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "using Plots\n",
     "using Interact\n",
@@ -1148,7 +1278,11 @@
       ]
      },
      "execution_count": 38,
-     "metadata": {},
+     "metadata": {
+      "application/vnd.webio.node+json": {
+       "kernelId": "4e75afb0-efcb-41e0-ad75-e41014cb253c"
+      }
+     },
      "output_type": "execute_result"
     }
    ],
@@ -2194,7 +2328,11 @@
       ]
      },
      "execution_count": 39,
-     "metadata": {},
+     "metadata": {
+      "application/vnd.webio.node+json": {
+       "kernelId": "4e75afb0-efcb-41e0-ad75-e41014cb253c"
+      }
+     },
      "output_type": "execute_result"
     }
    ],
@@ -2524,7 +2662,11 @@
       ]
      },
      "execution_count": 40,
-     "metadata": {},
+     "metadata": {
+      "application/vnd.webio.node+json": {
+       "kernelId": "4e75afb0-efcb-41e0-ad75-e41014cb253c"
+      }
+     },
      "output_type": "execute_result"
     }
    ],
@@ -2545,6 +2687,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": "cdb1f712468043bc821cf0cf5e802610",
+   "lastKernelId": "4e75afb0-efcb-41e0-ad75-e41014cb253c"
+  },
   "kernelspec": {
    "display_name": "Julia 1.1.0",
    "language": "julia",
