Updated links and notebooks

--- a/Examples/lineshape_and_poleposition_in_SLA.ipynb
+++ b/Examples/lineshape_and_poleposition_in_SLA.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Scatering length model\n",
-    "aka [E.Bratten (2005,2013)]\n"
+    "see arXiv:1904.10021, proposal to X(3872) by E.Bratten at Phys.Rev. D76 (2007) 094028"
    ]
   },
   {
@@ -75,7 +75,7 @@
     "        xlab=\"m(Dbar Sigma) (GeV)\", l=(2,:black), sp=2)\n",
     "    plot!(s->abs2(M(s+1e-6im,γ))*ρ2(s), 4.25^2, 4.4^2, yaxis=false, lab=\"\",\n",
     "        xlab=\"m(Jpsi p) (GeV)\", l=(2,:black), sp=3)\n",
-    "end"
+    "end;"
    ]
   },
   {
@@ -548,7 +548,11 @@
       ]
      },
      "execution_count": 8,
-     "metadata": {},
+     "metadata": {
+      "application/vnd.webio.node+json": {
+       "kernelId": null
+      }
+     },
      "output_type": "execute_result"
     }
    ],
@@ -561,6 +565,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": "e8c52061bea54b28834d2391a877f861",
+   "lastKernelId": "537a7165-dc09-41c2-8356-ce2d7265d775"
+  },
   "kernelspec": {
    "display_name": "Julia 1.1.0",
    "language": "julia",
