--- a/Examples/pentaquark_dalitzplot.ipynb
+++ b/Examples/pentaquark_dalitzplot.ipynb
@@ -746,7 +746,7 @@
     "end\n",
     "\n",
     "# intensity\n",
-    "I(σ3,σ1, CS, Cs) = abs2(A(σ3,σ1, CS, Cs))"
+    "I(σ3,σ1, CS, Cs) = abs2(A(σ3,σ1, CS, Cs));"
    ]
   },
   {
@@ -2629,8 +2629,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "cdb1f712468043bc821cf0cf5e802610",
-   "lastKernelId": "4e75afb0-efcb-41e0-ad75-e41014cb253c"
+   "lastCommId": "b9aac1fe54d24c6c96ec7f90a40635ba",
+   "lastKernelId": "78000ac3-6dd7-4167-ba2a-04f376f560d0"
   },
   "kernelspec": {
    "display_name": "Julia 1.1.0",
