--- a/main.tex
+++ b/main.tex
@@ -492,7 +492,7 @@ hadronic molecules (atoms)\qquad
 
 \begin{frame}{What could we expect}
     \begin{center}
-        \Huge Example demo\\[1cm]
+        \Huge Example demo\quad\href{https://hub-binder.mybinder.ovh/user/mmikhasenko-201-rons-manchester-j8y5l8kk/apps/Examples/pentaquark_dalitzplot.ipynb}{\color{orange}[link]}\\[1cm]
         \raisebox{-0.5\height}{\includegraphics[width=0.3\textwidth]{figs/julia-logo-300.png}}\qquad
         \raisebox{-0.5\height}{\includegraphics[width=0.25\textwidth]{figs/atom_ed.png}}
     \end{center}
@@ -889,9 +889,9 @@ hadronic molecules (atoms)\qquad
 
 \begin{frame}{Lineshape of the spectrum in the scattering length approximation}
 \begin{center}
-    \Huge Example demo\\[1cm]
-    \raisebox{-0.5\height}{\includegraphics[width=0.3\textwidth]{figs/julia-logo-300.png}}\qquad
-    \raisebox{-0.5\height}{\includegraphics[width=0.25\textwidth]{figs/atom_ed.png}}
+    \Huge Example demo\quad\href{https://hub-binder.mybinder.ovh/user/mmikhasenko-201-rons-manchester-j8y5l8kk/apps/Examples/lineshape_and_poleposition_in_SLA.ipynb}{\color{orange}[link]}\\[1cm]
+    \raisebox{-0.5\height}{\includegraphics[width=0.2\textwidth]{figs/julia-logo-300.png}}\qquad
+    \raisebox{-0.5\height}{\includegraphics[width=0.18\textwidth]{figs/jupyter_logo.png}}\\
 \end{center}
 \end{frame}
 
