--- a/Examples/lineshape_and_poleposition_in_SLA.ipynb
+++ b/Examples/lineshape_and_poleposition_in_SLA.ipynb
@@ -566,8 +566,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "e8c52061bea54b28834d2391a877f861",
-   "lastKernelId": "537a7165-dc09-41c2-8356-ce2d7265d775"
+   "lastCommId": null,
+   "lastKernelId": null
   },
   "kernelspec": {
    "display_name": "Julia 1.1.0",
